--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,14 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TriState CheckBox"
-            app:sephiroth_checkbox3_checkableCycle="@array/sephiroth_checkbox3_cycleUncheckedIndeterminateOnly"
+            android:text="Tri State CheckBox"
+            app:sephiroth_checkbox3_checkableCycle="@array/sephiroth_checkbox3_cycleIndeterminate"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:enabled="true"
-            app:sephiroth_checkbox3_indeterminate="true"
+            app:sephiroth_checkbox3_indeterminate="false"
             android:checked="true"
     />
 
@@ -36,7 +36,7 @@
             android:scaleY="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TriState CheckBox"
+            android:text="Tri State CheckBox"
             app:layout_constraintTop_toBottomOf="@+id/checkBox3"
             android:layout_marginTop="32dp"
             android:layout_marginStart="8dp"
