Add sample code in Java

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity2">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textView1"
@@ -62,13 +62,5 @@
         app:layout_constraintStart_toStartOf="@+id/checkBox3"
         app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonToJava"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/checkBox1"
-        android:text="Sample in Java Code"
-        app:layout_constraintTop_toBottomOf="@id/checkBox4"
-        android:textColor="@android:color/black"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
